@@ -61,6 +61,7 @@ Changes in version 0.1.2.5-xxxx - 200?-??-??
     - Have GETINFO dir/status/* work on hosts with DirPort disabled.
     - Reimplement GETINFO so that info/names stays in sync with the
       actual keys.
+    - Implement "GETINFO fingerprint".
 
   o Controller bugfixes:
     - Report the circuit number correctly in STREAM CLOSED events. (Bug
